# ltelinksim

./: CMakeLists.txt  README.md
3rd/src/: CMakeLists.txt
configuration/: lte_cfg.xml
lib/: CRC.hpp  CodeBlockProcedure.hpp  DataSource.hpp  Modulation.hpp  RateMatchPublic.hpp  TBSizeTable.hpp  TurboCode.hpp  TurboCodeParams.hpp  TurboCodeRateMatch.hpp  public.h
sim_core/inc/: AWGNChannelGenerator.h  ChannelGenerator.h  FadingChannelGenerator.h  SimEntity.h  SimLogger.h  WaveformGenerator.h  WaveformReciver.h
sim_core/src/: AWGNChannelGenerator.cpp  CMakeLists.txt  ChannelGenerator.cpp  FadingChannelGenerator.cpp  SimEntity.cpp  SimLogger.cpp  WaveformGenerator.cpp  WaveformReciver.cpp
sim_init/inc/: ChannelSimElement.h  CommonSimElement.h  ConfigurationFile.h  ENodeB.h  PDSCH.h  ReciverSimElement.h  SimCommand.h  SimElementInterface.h  TransmiterSimElement.h
sim_init/src/: CMakeLists.txt  ChannelSimElement.cpp  CommonSimElement.cpp  ConfigurationFile.cpp  ENodeB.cpp  PDSCH.cpp  ReciverSimElement.cpp  SimCommand.cpp  TransmiterSimElement.cpp
sim_lte/inc/: ENodeB.h  PDSCH.h
sim_lte/src/: CMakeLists.txt  ENodeB.cpp  PDSCH.cpp
test/: main.cpp
